--- a/resources/scss/home/main.scss
+++ b/resources/scss/home/main.scss
@@ -1,3 +1,6 @@
-.h1{
-    color: aqua;
+.custom-caption {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6));
+    padding: 20px;
+    border-radius: 5px;
+    color: white;
 }
